[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Bricks/Explo.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Bricks/ExploRad.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=3]
radius = 173.142

[node name="Explo" type="RigidBody2D"]
collision_layer = 257
collision_mask = 257
input_pickable = true
mass = 9.0
physics_material_override = SubResource( 2 )
gravity_scale = 8.92
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExploRad" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256
gravity_vec = Vector2( 0, 0 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExploRad"]
shape = SubResource( 3 )

[connection signal="mouse_entered" from="." to="ExploRad" method="_on_Explo_mouse_entered"]
[connection signal="mouse_exited" from="." to="ExploRad" method="_on_Explo_mouse_exited"]
[connection signal="explode" from="ExploRad" to="." method="_on_ExploRad_explode"]
